# robotica_p3

./: CMakeLists.txt  README.md  drone_drive.py  package.xml
scripts/: drone_drive.py  encontra_objeto.py
