<?xml version="1.0"?>
<package>
  <name>robotica_p3</name>
  <version>1.0.0</version>
  <description>Trabalho 3 de robotica computacional</description>

  <maintainer email="borg@todo.todo">borg</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
